openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phillk8s-dev
  labels:
    app.kubernetes.io/managed-by: ansible
    environment: production
